--- a/app/src/main/res/layout/activity_menu_update__add.xml
+++ b/app/src/main/res/layout/activity_menu_update__add.xml
@@ -9,19 +9,30 @@
     android:layout_height="match_parent"
     tools:context=".Activity.Update_All_Product_Insert">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/buttonBack"
+            android:background="@drawable/back"
+            android:layout_margin="5dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp" />
+        <TextView
+            android:textStyle="bold"
+            android:gravity="center"
+            android:textColor="#f39"
+            android:layout_margin="10dp"
+            android:textSize="30dp"
+            android:text="Thêm Món"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
-<TextView
-    android:textStyle="bold"
-    android:gravity="center"
-    android:textColor="#f39"
-    android:textSize="20dp"
-    android:text="Thêm Món"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
     <LinearLayout
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:orientation="horizontal">
         <TextView
             android:layout_marginTop="15dp"
@@ -38,7 +49,7 @@
 
             android:layout_marginTop="5dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
         </Spinner>
 
     </LinearLayout>
