--- a/app/src/main/res/layout/activity_update_menu.xml
+++ b/app/src/main/res/layout/activity_update_menu.xml
@@ -9,16 +9,28 @@
     android:layout_height="match_parent"
     tools:context=".Activity.Update_All_Product">
 
-    <TextView
-        android:background="@drawable/border_mau_vien1"
-
-        android:textStyle="bold"
-        android:textColor="#f39"
-        android:gravity="center"
-        android:textSize="20dp"
-        android:text="Cập nhập Món"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp" />
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/buttonBack"
+            android:background="@drawable/back"
+            android:layout_margin="5dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp" />
+
+        <TextView
+            android:textStyle="bold"
+            android:textColor="#f39"
+            android:gravity="center"
+            android:textSize="30dp"
+            android:text="Cập nhập Món"
+            android:layout_margin="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+
 
     <Button
         android:id="@+id/button_UpdateMenu_add"
