--- a/app/src/main/res/layout/activity_update_table__update.xml
+++ b/app/src/main/res/layout/activity_update_table__update.xml
@@ -7,14 +7,29 @@
     android:layout_height="match_parent"
     tools:context=".Activity.Update_All_Table_Insert"
     android:orientation="vertical">
-    <TextView
-        android:textStyle="bold"
-        android:gravity="center"
-        android:textColor="#f39"
-        android:textSize="20dp"
-        android:text="Thêm Bàn"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/buttonBack"
+            android:background="@drawable/back"
+            android:layout_margin="5dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp" />
+
+        <TextView
+            android:textStyle="bold"
+            android:gravity="center"
+            android:textColor="#f39"
+            android:textSize="30dp"
+            android:layout_margin="10dp"
+            android:text="Thêm Bàn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_marginTop="15dp"
