Update Login, Statictis, Table, Bill Management

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,7 +36,7 @@
                 android:layout_marginTop="16dp"
                 android:background="@drawable/user_profile_image_background"
                 android:elevation="4dp"
-                android:src="@drawable/man" />
+                android:src="@drawable/user1" />
 
             <RelativeLayout
                 android:layout_width="fill_parent"
@@ -45,7 +45,7 @@
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:layout_marginTop="20dp"
-                android:background="#ffffff"
+                android:background="@drawable/border_vien"
                 android:elevation="4dp"
                 android:orientation="vertical"
                 android:padding="20dp">
@@ -56,7 +56,7 @@
                     android:orientation="vertical"
                     android:paddingTop="30dp">
 
-                    <android.support.design.widget.TextInputLayout
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
@@ -69,9 +69,9 @@
                             android:singleLine="true"
                             android:hint="Email"
                             android:inputType="text" />
-                    </android.support.design.widget.TextInputLayout>
+                    </LinearLayout>
 
-                    <android.support.design.widget.TextInputLayout
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
@@ -85,7 +85,7 @@
                             android:drawableTint="#ffffff"
                             android:hint="Password"
                             android:inputType="textPassword" />
-                    </android.support.design.widget.TextInputLayout>
+                    </LinearLayout>
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -110,8 +110,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_weight="2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </LinearLayout>
+        android:layout_height="match_parent"
+        android:layout_weight="2"></LinearLayout>
 </LinearLayout>
