--- a/app/src/main/res/layout/insert_table.xml
+++ b/app/src/main/res/layout/insert_table.xml
@@ -32,6 +32,25 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:textColor="#080808"
+            android:text="Mô tả : "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <EditText
+            android:id="@+id/edittext_table_des"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_marginTop="10dp"
