--- a/app/src/main/res/drawable/border_vien.xml
+++ b/app/src/main/res/drawable/border_vien.xml
@@ -11,7 +11,7 @@
     <!-- đặt thuộc tính màu và độ rộng của đường viền -->
     <stroke
         android:width="3dp"
-        android:color="#0b0b0b" >
+        android:color="#ffff" >
     </stroke>
 
     <!-- các thuộc tính căn chỉnh-->
