--- a/app/src/main/res/layout/activity_update_table__update.xml
+++ b/app/src/main/res/layout/activity_update_table__update.xml
@@ -24,7 +24,7 @@
             android:textColor="#f39"
             android:textSize="30dp"
             android:layout_margin="10dp"
-            android:text="Thêm Bàn"
+            android:text="Sửa Bàn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -45,6 +45,25 @@
             android:layout_height="wrap_content" />
         <EditText
             android:id="@+id/edittext_update_number_table"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:textStyle="bold"
+            android:textSize="20dp"
+            android:textColor="#080808"
+            android:text="Mô tả : "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <EditText
+            android:id="@+id/edittext_update_table_des"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
